# macos-surgery

./: .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  setup-macos-in-vmware.sh
.github/workflows/: ci.yml
src/macos_surgery/: __init__.py  example.py
tests/: __init__.py  test_example.py
